--- a/Day006_affine_HW.ipynb
+++ b/Day006_affine_HW.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,25 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rotation Matrix\n",
-      "[[  0.35355339   0.35355339  74.98066402]\n",
-      " [ -0.35355339   0.35355339 256.        ]]\n",
-      "\n",
-      "Translation Matrix\n",
-      "[[  1.   0. 100.]\n",
-      " [  0.   1. -50.]]\n",
-      "[[  1.35355339   0.35355339 174.98066402]\n",
-      " [ -0.35355339   1.35355339 206.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 給定兩兩一對，共三對的點\n",
     "# 這邊我們先用手動設定三對點，一般情況下會有點的資料或是透過介面手動標記三個點\n",
@@ -59,24 +43,8 @@
     "pt2 = np.array([[80,80], [330,150], [300,300]], dtype=np.float32)\n",
     "\n",
     "# 取得 affine 矩陣並做 affine 操作\n",
-    "\n",
-    "# 取得旋轉矩陣\n",
-    "# getRotationMatrix2D(center, angle, scale)\n",
-    "M_rotate = cv2.getRotationMatrix2D((cols//2, rows//2), 45, 0.5)\n",
-    "print('Rotation Matrix')\n",
-    "print(M_rotate)\n",
-    "print()\n",
-    "\n",
-    "# 取得平移矩陣\n",
-    "M_translate = np.array([[1, 0, 100], [0, 1, -50]], dtype=np.float32)\n",
-    "print('Translation Matrix')\n",
-    "print(M_translate)\n",
-    "\n",
-    "M_affine = M_rotate+M_translate\n",
-    "print(M_affine)\n",
-    "\n",
-    "img_affine = cv2.warpAffine(img, M_affine, (cols, rows))\n",
-    "\n",
+    "M_affine = \n",
+    "img_affine = \n",
     "\n",
     "# 在圖片上標記點\n",
     "img_copy = img.copy()\n",
@@ -117,9 +85,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
