--- a/Day005_draw_HW.ipynb
+++ b/Day005_draw_HW.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,15 +120,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "256 256\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "img_hw = img.copy()\n",
     "point1 = [60, 40]\n",
@@ -151,12 +143,12 @@
     "h, w = img_hw.shape[:2]\n",
     "\n",
     "# 圖片鏡像\n",
-    "img_hw = img_hw[:, ::-1, :]\n",
+    "img_hw = \n",
     "\n",
     "# 透過四則運算計算鏡像後位置\n",
     "# 確保點的位置一樣是左上跟右下，所以交換鏡像後的 x 座標 (y 座標做水平鏡像後位置不變)\n",
-    "point1[0] = 0\n",
-    "point2[0] = 0\n",
+    "point1[0] = \n",
+    "point2[0] = \n",
     "\n",
     "\"\"\"\n",
     "縮放處理 (0.5 倍)\n",
@@ -165,15 +157,14 @@
     "fy = 0.5\n",
     "resize_col = int(img_hw.shape[1]*fx)\n",
     "resize_row = int(img_hw.shape[0]*fy)\n",
-    "print(resize_col, resize_row)\n",
-    "# 建構 scale matrix\n",
-    "M_scale = np.float32([[1,0,0],[0,1,0]])\n",
-    "img_hw = cv2.warpAffine(img_hw,M_scale, (resize_col,resize_row))\n",
     "\n",
-    "\"\"\"\n",
+    "# 建構 scale matrix\n",
+    "M_scale = np.array()\n",
+    "img_hw = cv2.warpAffine(...)\n",
+    "\n",
     "# 把左上跟右下轉為矩陣型式\n",
     "bbox = np.array((point1, point2), dtype=np.float32)\n",
-    "print('M_scale.shape={}, bbox.shape={}'.format(M_scale.shape, bbox.shape))\n",
+    "#print('M_scale.shape={}, bbox.shape={}'.format(M_scale.shape, bbox.shape))\n",
     "\n",
     "# 做矩陣乘法可以使用 `np.dot`, 為了做矩陣乘法, M_scale 需要做轉置之後才能相乘\n",
     "homo_coor_result = np.dot(M_scale.T, bbox)\n",
@@ -186,7 +177,7 @@
     "\n",
     "# 畫圖\n",
     "cv2.rectangle(img_hw, scale_point1, scale_point2, (0, 0, 255), 3)\n",
-    "\"\"\"\n",
+    "\n",
     "while True:\n",
     "    cv2.imshow('image', img_hw)\n",
     "    k = cv2.waitKey(0)\n",
@@ -231,9 +222,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
