--- a/Day008_sobel_gaussian_blur_HW.ipynb
+++ b/Day008_sobel_gaussian_blur_HW.ipynb
@@ -40,36 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(512, 512)\n",
-      "uint8\n",
-      "(512, 512)\n",
-      "uint8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 轉為灰階圖片\n",
     "img_grey = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "# 對 x 方向以包含負數的資料格式 (cv2.CV_16S) 進行 Sobel 邊緣檢測\n",
     "img_sobel_x = cv2.Sobel(img_grey, cv2.CV_16S, dx=1, dy=0, ksize=3)\n",
-    "print(img_sobel_x.shape)\n",
     "# 對 x 方向依照比例縮放到所有數值都是非負整數\n",
     "img_sobel_x = cv2.convertScaleAbs(img_sobel_x)\n",
-    "print(img_sobel_x.dtype)\n",
     "\n",
     "# 對 x 方向直接以非負整數的資料格式 (uint8) 進行 Sobel 邊緣檢測\n",
-    "img_sobel_x_uint8 = cv2.Sobel(img_sobel_x, cv2.CV_16S, dx=1, dy=0, ksize=3)\n",
-    "print(img_sobel_x_uint8.shape)\n",
-    "img_sobel_x_uint8 = cv2.convertScaleAbs(img_sobel_x_uint8)\n",
-    "print(img_sobel_x_uint8.dtype)\n",
+    "img_sobel_x_uint8 = cv2.Sobel(img_grey, -1 , dx=1, dy=0, ksize=3)\n",
+    "\n",
     "\n",
     "#　組合 + 顯示圖片\n",
     "img_show = np.hstack((img_grey, img_sobel_x, img_sobel_x_uint8))\n",
