--- a/Day32_yolo_prediction_HW.ipynb
+++ b/Day32_yolo_prediction_HW.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "grid_num X B = 7*2"
+    "grid_num square X B = 7*7*2"
    ]
   },
   {
